tests/syntax_error/match_bad_case.jou
enum Foo:
    One
    Two
    Three

def blah(f: Foo) -> None:
    match f:
        case Foo.One Foo.Two:  # Error: expected ':' followed by a new line with more indentation, got a variable name 'Foo'
            printf("hi\n")
